--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div>Open source</div>
 
 		<p>
-			<a href="https://github.com/bgcorp">GitHub</a>
+			<a href="https://github.com/bgcorp">Go to GitHub</a>
 		</p>
 
 		<div>
